--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-inverse navbar-static-top">
     <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
-        <% if session['auth'] %>
+        <% if session[:user_id] %>
         <li><a href="/sessions/show">Profile</a></li>
         <li><a href="/auth/logout">Logout</a></li>
         <% else %>
